# AgenticLanggraph

./: README.md  pyproject.toml  requirements.txt
1-BasicChatbot/: 1-basicchatbot.ipynb
3-Debugging/: agent.py  debugging.ipynb
